# DAiW-Music-Brain

./: .cursorrules  .gitignore  CLAUDE.md  DELIVERY_SUMMARY.md  DEVELOPMENT_ROADMAP.md  EXPANSION_ROADMAP.md  README.md  ROADMAP.md  VERSION  app.py  daiw.spec  launcher.py  pyproject.toml  requirements.txt  setup.py
.claude/: settings.json
.github/scripts/: README.md  pr_manager.py
.github/workflows/: ci.yml  pr-manager.yml  release.yml
DAiW-Music-Brain/: CLAUDE.md
DAiW-Music-Brain/music_brain/audio_vault/: kit_loader.py  refinery.py
DAiW-Music-Brain/music_brain/groove/: __init__.py  engine.py
DAiW-Music-Brain/music_brain/structure/: __init__.py  comprehensive_engine.py
DAiW_Core/: CMakeLists.txt  README.md
DAiW_Core/Source/Core/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
DAiW_Core/Source/Memory/: DAiW_Buffer.cpp  DAiW_Buffer.h  MemoryManager.cpp  MemoryManager.h
DAiW_Core/Source/PythonBridge/: PythonBridge.cpp  PythonBridge.h  PythonModule.cpp
DAiW_Core/Source/UI/: DreamStateComponent.cpp  DreamStateComponent.h  LookAndFeel_Blueprint.cpp  LookAndFeel_Blueprint.h  LookAndFeel_Metal.cpp  LookAndFeel_Metal.h  MainComponent.cpp  MainComponent.h  WorkStateComponent.cpp  WorkStateComponent.h
audio_vault/: __init__.py  build_industrial_kit.py  build_logic_kit.py  freesound_downloader.py  generate_demo_samples.py  mvp_test.py
cpp/: CMakeLists.txt
cpp/include/daiw/: types.hpp
cpp/src/core/: memory.cpp
cpp/tests/: memory_pool_test.cpp
docs/: LOGIC_PRO_IMPORT.md  audio_vault.md
examples/: README.md  audio_vault_workflow.md  basic_therapy_to_midi.py
examples/midi/: kelly_song_harmony_logic.mid
iDAW_Core/: CMakeLists.txt
iDAW_Core/include/: DiagnosticsCore.h  GrooveCore.h  HarmonyCore.h  InnovationTrigger.h  OSCHandler.h  PythonBridge.h  TimeMachine.h  Version.h
iDAW_Core/plugins/Palette/shaders/: Watercolor.frag
iDAW_Core/plugins/Press/shaders/: Heartbeat.frag
iDAW_Core/plugins/Press/src/: PressProcessor.cpp
iDAW_Core/plugins/Trace/shaders/: Spirograph.frag
iDAW_Core/src/: PythonBridge.cpp
iDAW_Core/src/bindings/: PyBindings.cpp
iDAW_Core/src/groove/: GrooveEngine.cpp
iDAW_Core/src/osc/: OSCManager.cpp
iDAW_Core/tests/: test_diagnostics.cpp
mcp_repos/: README.md  __init__.py  __main__.py  cli.py  manager.py  models.py  server.py
mcp_repos/configs/: claude_desktop_config.json  cursor_mcp.json  sburdges_repos.json
mcp_todo/: __init__.py
mcp_workstation/: __init__.py  models.py  proposals.py
music_brain/: __init__.py  audio_refinery.py  cli.py  config.py  exceptions.py
music_brain/agents/: __init__.py  unified_hub.py
music_brain/audio/: __init__.py  feel.py  reference_dna.py
music_brain/audio_vault/: __init__.py  config.py  refinery.py
music_brain/data/: emotion_taxonomy.json  song_intent_schema.yaml
music_brain/data/corpus/: .gitkeep  default.txt
music_brain/daw/: logic.py
music_brain/groove/: __init__.py  applicator.py  engine.py  extractor.py  groove_engine.py  templates.py
music_brain/integrations/: penta_core.py
music_brain/lyrics/: __init__.py  engine.py
music_brain/orchestrator/: bridge_api.py  coordinator.py  logging_utils.py
music_brain/orchestrator/processors/: groove.py  harmony.py
music_brain/session/: __init__.py  harmony.py  intent_processor.py  intent_schema.py  interrogator.py  proposals.py  teaching.py
music_brain/structure/: __init__.py  chord.py  comprehensive_engine.py  sections.py  structure_engine.py  tension.py  tension_curve.py
music_brain/utils/: midi_io.py
scripts/: README.md  __init__.py  build_logic_kit.py  generate_demo_samples.py  quick_session.py
tests/: test_applicator.py  test_audio_feel.py  test_audio_refinery.py  test_audio_vault.py  test_basic.py  test_bridge_integration.py  test_chord_analysis.py  test_cli_flow.py  test_comprehensive_engine.py  test_engine_flow.py  test_groove_engine.py  test_integration.py  test_intent_schema.py  test_lyrical_mirror.py  test_lyrics.py  test_lyrics_engine.py  test_markers.py  test_mcp_approval.py  test_orchestrator.py  test_penta_core_integration.py  test_pr_manager.py  test_proposals.py  test_reference_dna.py  test_smoke.py  test_structure_engine.py  test_tension.py  test_tension_curve.py
